# SwiftResources

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .swiftformat  BUILD.bazel  MODULE.bazel  Makefile  Package.swift  README.md  TODO.md
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yaml  create-release.yml  publish.yaml  release.yaml  release.yml  release_prep.sh
Sources/: SR.swift
Sources/Commands/: GenerateCommand.swift
Sources/Emitter/: SwiftEmitter.swift
Sources/Parsers/: AssetCatalogParser.swift  DiscoveredColor.swift  DiscoveredResource.swift  FileParser.swift  FontParser.swift  ImageParser.swift
Sources/Parsers/File/: DiscoveredResource.swift
Sources/Parsers/Font/: DiscoveredFont.swift
Sources/Parsers/Image/: DiscoveredImage.swift
Sources/Parsers/String/: DiscoveredString.swift  StringCatalogModels.swift  StringCatalogParser.swift  StringFormatArgument.swift  StringFormatSpecifier.swift  StringsFileParser.swift
Sources/Utils/: DuplicateChecker.swift  FormatStringParser.swift  NameSanitizer.swift  StringIdentifierGenerator.swift  StringValidator.swift
Tests/: AssetCatalogParserTests.swift  CLIParserTests.swift  DuplicateCheckerTests.swift  FileParserTests.swift  FontParserTests.swift  ImageParserTests.swift  NameSanitizerTests.swift  SecurityTests.swift  StringParserTests.swift  SwiftEmitterTests.swift
examples/: README.md
examples/Resources/: Errors.xcstrings  Localizable.xcstrings
examples/Resources/Assets.xcassets/Colors/Primary.colorset/: Contents.json
examples/Resources/Assets.xcassets/Icons/Settings.imageset/: Contents.json
examples/Resources/Data/: config.json  countries.txt  settings.plist
rules_swift_resources/: BUILD.bazel  defs.bzl  providers.bzl
rules_swift_resources/test/: BUILD.bazel
rules_swift_resources/test/fixtures/: BUILD.bazel
rules_swift_resources/test/integration/: BUILD.bazel
rules_swift_resources/test/integration/expected/: Resources.swift
rules_swift_resources/test/starlark/: BUILD.bazel  provider_tests.bzl
swift_resources/: BUILD.bazel  defs.bzl  providers.bzl
swift_resources/test/: BUILD.bazel
swift_resources/test/fixtures/: BUILD.bazel
swift_resources/test/integration/: BUILD.bazel
swift_resources/test/integration/expected/: Resources.swift
