# Copyright 2025 Jeff Hodsdon
# SPDX-License-Identifier: Apache-2.0

test_suite(
    name = "all_tests",
    tests = [
        "//rules_swift_resources/test/integration:golden_test",
        "//rules_swift_resources/test/integration:generate_public_builds",
        "//rules_swift_resources/test/integration:generate_bundle_override_builds",
        "//rules_swift_resources/test/integration:library_compiles",
    ],
)
