# Copyright 2025 Jeff Hodsdon
# SPDX-License-Identifier: Apache-2.0

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("//rules_swift_resources:defs.bzl", "swift_resources_generate", "swift_resources_library")

# Test: Generate code and compare to golden file
swift_resources_generate(
    name = "generate_all_resources",
    out = "Generated.swift",
    files = ["//rules_swift_resources/test/fixtures:data"],
    fonts = ["//rules_swift_resources/test/fixtures:fonts"],
    images = ["//rules_swift_resources/test/fixtures:images"],
    module_name = "TestResources",
)

diff_test(
    name = "golden_test",
    file1 = ":generate_all_resources",
    file2 = "expected/Resources.swift",
)

# Test: Generate with public access level
swift_resources_generate(
    name = "generate_public",
    out = "PublicResources.swift",
    access_level = "public",
    fonts = ["//rules_swift_resources/test/fixtures:fonts"],
    module_name = "PublicResources",
)

build_test(
    name = "generate_public_builds",
    targets = [":generate_public"],
)

# Test: Generate with bundle override
swift_resources_generate(
    name = "generate_bundle_override",
    out = "ModuleResources.swift",
    bundle = ".module",
    fonts = ["//rules_swift_resources/test/fixtures:fonts"],
    module_name = "ModuleResources",
)

build_test(
    name = "generate_bundle_override_builds",
    targets = [":generate_bundle_override"],
)

# Test: swift_resources_library macro compiles
swift_resources_library(
    name = "compiled_resources",
    access_level = "public",
    files = ["//rules_swift_resources/test/fixtures:data"],
    fonts = ["//rules_swift_resources/test/fixtures:fonts"],
    images = ["//rules_swift_resources/test/fixtures:images"],
    module_name = "CompiledResources",
)

build_test(
    name = "library_compiles",
    targets = [":compiled_resources"],
)

# Test: Generate with force_unwrap
swift_resources_generate(
    name = "generate_force_unwrap",
    out = "ForceUnwrapResources.swift",
    fonts = ["//rules_swift_resources/test/fixtures:fonts"],
    force_unwrap = True,
    module_name = "ForceUnwrapResources",
)

build_test(
    name = "generate_force_unwrap_builds",
    targets = [":generate_force_unwrap"],
)
